syntax = "proto3";

package internal;

message SynchronousReply {
    bool success = 1;
    string error_message = 2;
}
